--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_LeftColumn.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_LeftColumn.cshtml
@@ -1,6 +1,6 @@
 ﻿@{ 
     var menusLeft = ThemeHelper.GetMenus(ThemeResources.MenuLocation.LeftSidebar, CurrentLanguage);
-    var zoneLeftWidgets = ThemeHelper.GetLayoutZoneWebsiteWidgets(CurrentLayout, ThemeResources.Zones.LeftSidebar);
+    var zoneLeftWidgets = ThemeHelper.GetWebsiteWidgets(CurrentLayout, ThemeResources.Zones.LeftSidebar);
 
     if (menusLeft.Count > 0 || zoneLeftWidgets.Count > 0)
     {
