--- a/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_RightColumn.cshtml
+++ b/NetCoreCMS.Web/Themes/Default/Shared/Layouts/Parts/_RightColumn.cshtml
@@ -1,6 +1,6 @@
 ﻿@{  
     var menusRight = ThemeHelper.GetMenus(ThemeResources.MenuLocation.RightSidebar, CurrentLanguage);
-    var zoneRightWidgets = ThemeHelper.GetLayoutZoneWebsiteWidgets(CurrentLayout, ThemeResources.Zones.RightSidebar);
+    var zoneRightWidgets = ThemeHelper.GetWebsiteWidgets(CurrentLayout, ThemeResources.Zones.RightSidebar);
 
     if (menusRight.Count > 0 || zoneRightWidgets.Count > 0)
     {
