--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_LeftColumn.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_LeftColumn.cshtml
@@ -2,7 +2,7 @@
     NccTranslator<ThemeResources> _TT = new NccTranslator<ThemeResources>(CurrentLanguage);
 
     var menusLeft = ThemeHelper.GetMenus("LeftColumn", CurrentLanguage);
-    var zoneLeftWidgets = ThemeHelper.GetLayoutZoneWebsiteWidgets(CurrentLayout, "LeftSidebar");
+    var zoneLeftWidgets = ThemeHelper.GetWebsiteWidgets(CurrentLayout, "LeftSidebar");
 
     if (menusLeft.Count > 0 || zoneLeftWidgets.Count > 0)
     {
