--- a/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Footer.cshtml
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/Shared/Layouts/Parts/_Footer.cshtml
@@ -44,7 +44,7 @@
                 </div>
                 <div class="col-md-4">
                     @{
-                    var zoneFooterWidgets = ThemeHelper.GetLayoutZoneWebsiteWidgets(CurrentLayout, "Footer");
+                    var zoneFooterWidgets = ThemeHelper.GetWebsiteWidgets(CurrentLayout, "Footer");
                     <!-- Footer Widgets Start -->
                     if (zoneFooterWidgets != null && zoneFooterWidgets.Count > 0)
                     {
