--- a/NetCoreCMS.Web/Themes/NccSeventeen/wwwroot/css/red-skin.css
+++ b/NetCoreCMS.Web/Themes/NccSeventeen/wwwroot/css/red-skin.css
@@ -157,3 +157,10 @@ footer a {
 .label-info {
     background-color: #f7160b;
 }
+.panel-primary {
+    border-color: #ad140c;
+}
+
+    .panel-primary .panel-heading {
+        background-color: #ad140c;
+    }
